<resources>
    <!--<string name="app_name">MovioTK</string>-->
    <!--<string name="switch_theme">Switch Theme</string>-->
    <string name="movie_backdrop_image">Movie backdrop image</string>
    <string name="movie_cover_image">Movie cover image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="genres">Genres</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_error_text">An error occurred while downloading movies data.</string>
    <string name="notification_downloading_title">Downloading movies data</string>
    <string name="notification_downloaded_title">Downloading finished</string>
    <string name="notification_downloaded_text">Movies data downloaded successfully</string>
    <string name="content_authority">pv256.fi.muni.cz.moviotk.uco409735.app</string>
    <string name="sync_account_type">pv256.fi.muni.cz.moviotk.uco409735.sync.account</string>
    <string name="update_db">Update db</string>
    <string name="db_net">DB/Net</string>
    <string name="director">Unknown</string>
    <string name="explore_the_movies">Explore the movies</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="crew_image">Cast image</string>
</resources>
