<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_genres" android:title="@string/genres">
        <menu>
            <group android:id="@+id/nav_genres_group" android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_action"
                    android:title="@string/action"/>
                <item
                    android:id="@+id/nav_adventure"
                    android:title="@string/adventure"/>
                <item
                    android:id="@+id/nav_animation"
                    android:title="@string/animation"/>
                <item
                    android:id="@+id/nav_comedy"
                    android:title="@string/comedy"/>
                <item
                    android:id="@+id/nav_crime"
                    android:title="@string/crime"/>
                <item
                    android:id="@+id/nav_documentary"
                    android:title="@string/documentary"/>
                <item
                    android:id="@+id/nav_drama"
                    android:title="@string/drama"/>
                <item
                    android:id="@+id/nav_family"
                    android:title="@string/family"/>
                <item
                    android:id="@+id/nav_fantasy"
                    android:title="@string/fantasy"/>
                <item
                    android:id="@+id/nav_history"
                    android:title="@string/history"/>
                <item
                    android:id="@+id/nav_horror"
                    android:title="@string/horror"/>
                <item
                    android:id="@+id/nav_music"
                    android:title="@string/music"/>
                <item
                    android:id="@+id/nav_mystery"
                    android:title="@string/mystery"/>
                <item
                    android:id="@+id/nav_romance"
                    android:title="@string/romance"/>
                <item
                    android:id="@+id/nav_sciFi"
                    android:title="@string/sci_fi"/>
                <item
                    android:id="@+id/nav_tvMovie"
                    android:title="@string/tv_movie"/>
                <item
                    android:id="@+id/nav_thriller"
                    android:title="@string/thriller"/>
                <item
                    android:id="@+id/nav_war"
                    android:title="@string/war"/>
                <item
                    android:id="@+id/nav_western"
                    android:title="@string/western"/>
            </group>
        </menu>

    </item>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->

                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->

                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->
</menu>